# backend/api/gen/go/oa/service/v1/attendance.pb.validate.go
@@ -1382,6 +1382,14 @@ func (m *ListAttendanceRecordsRequest) validate(all bool) error {
 
 	// no validation rules for UserId
 
+	if m.Page != nil {
+		// no validation rules for Page
+	}
+
+	if m.PageSize != nil {
+		// no validation rules for PageSize
+	}
+
 	if len(errors) > 0 {
 		return ListAttendanceRecordsRequestMultiError(errors)
 	}
