# backend/api/gen/go/oa/service/v1/expense.pb.validate.go
@@ -773,6 +773,14 @@ func (m *ListExpenseApplicationsRequest) validate(all bool) error {
 
 	// no validation rules for Status
 
+	if m.Page != nil {
+		// no validation rules for Page
+	}
+
+	if m.PageSize != nil {
+		// no validation rules for PageSize
+	}
+
 	if len(errors) > 0 {
 		return ListExpenseApplicationsRequestMultiError(errors)
 	}
