# backend/api/gen/go/oa/service/v1/leave.pb.go
@@ -989,6 +989,8 @@ type ListLeaveApplicationsRequest struct {
 	state         protoimpl.MessageState       `protogen:"open.v1"`
 	UserId        uint32                       `protobuf:"varint,1,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`                                   // 申请人用户ID
 	Status        LeaveApplication_LeaveStatus `protobuf:"varint,2,opt,name=status,proto3,enum=oa.service.v1.LeaveApplication_LeaveStatus" json:"status,omitempty"` // 状态过滤
+	Page          *int32                       `protobuf:"varint,3,opt,name=page,proto3,oneof" json:"page,omitempty"`                                               // 页码
+	PageSize      *int32                       `protobuf:"varint,4,opt,name=page_size,json=pageSize,proto3,oneof" json:"page_size,omitempty"`                       // 每页条数
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -1035,6 +1037,20 @@ func (x *ListLeaveApplicationsRequest) GetStatus() LeaveApplication_LeaveStatus 
 		return x.Status
 	}
 	return LeaveApplication_PENDING
+}
+
+func (x *ListLeaveApplicationsRequest) GetPage() int32 {
+	if x != nil && x.Page != nil {
+		return *x.Page
+	}
+	return 0
+}
+
+func (x *ListLeaveApplicationsRequest) GetPageSize() int32 {
+	if x != nil && x.PageSize != nil {
+		return *x.PageSize
+	}
+	return 0
 }
 
 // 查询请假申请 - 回应
@@ -1293,10 +1309,15 @@ const file_oa_service_v1_leave_proto_rawDesc = "" +
 	"\x1eSubmitLeaveApplicationResponse\x12!\n" +
 	"\x02id\x18\x01 \x01(\rB\x11\xbaG\x0e\x92\x02\v申请单IDR\x02id\x128\n" +
 	"\vinstance_id\x18\x02 \x01(\rB\x17\xbaG\x14\x92\x02\x11工作流实例IDR\n" +
-	"instanceId\"\xec\x01\n" +
+	"instanceId\"\x98\x03\n" +
 	"\x1cListLeaveApplicationsRequest\x12c\n" +
 	"\auser_id\x18\x01 \x01(\rBJ\xbaGG\x92\x02D申请人用户ID，0=全部（app 端忽略此字段按本人查）R\x06userId\x12g\n" +
-	"\x06status\x18\x02 \x01(\x0e2+.oa.service.v1.LeaveApplication.LeaveStatusB\"\xbaG\x1f\x92\x02\x1c状态过滤，不传=全部R\x06status\"l\n" +
+	"\x06status\x18\x02 \x01(\x0e2+.oa.service.v1.LeaveApplication.LeaveStatusB\"\xbaG\x1f\x92\x02\x1c状态过滤，不传=全部R\x06status\x12G\n" +
+	"\x04page\x18\x03 \x01(\x05B.\xbaG+\x92\x02(页码（从 1 起，不传=不限页）H\x00R\x04page\x88\x01\x01\x12J\n" +
+	"\tpage_size\x18\x04 \x01(\x05B(\xbaG%\x92\x02\"每页条数（不传=不限页）H\x01R\bpageSize\x88\x01\x01B\a\n" +
+	"\x05_pageB\f\n" +
+	"\n" +
+	"_page_size\"l\n" +
 	"\x1dListLeaveApplicationsResponse\x125\n" +
 	"\x05items\x18\x01 \x03(\v2\x1f.oa.service.v1.LeaveApplicationR\x05items\x12\x14\n" +
 	"\x05total\x18\x02 \x01(\x04R\x05total\"?\n" +
@@ -1404,6 +1425,7 @@ func file_oa_service_v1_leave_proto_init() {
 	file_oa_service_v1_leave_proto_msgTypes[1].OneofWrappers = []any{}
 	file_oa_service_v1_leave_proto_msgTypes[2].OneofWrappers = []any{}
 	file_oa_service_v1_leave_proto_msgTypes[8].OneofWrappers = []any{}
+	file_oa_service_v1_leave_proto_msgTypes[10].OneofWrappers = []any{}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
