# backend/api/gen/go/oa/service/v1/leave.pb.validate.go
@@ -1749,6 +1749,14 @@ func (m *ListLeaveApplicationsRequest) validate(all bool) error {
 
 	// no validation rules for Status
 
+	if m.Page != nil {
+		// no validation rules for Page
+	}
+
+	if m.PageSize != nil {
+		// no validation rules for PageSize
+	}
+
 	if len(errors) > 0 {
 		return ListLeaveApplicationsRequestMultiError(errors)
 	}
