# backend/app/app/service/cmd/server/assets/openapi.yaml
@@ -1059,6 +1059,16 @@ paths:
                         - WITHDRAWN
                     type: string
                     format: enum
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
             responses:
                 "200":
                     description: OK
@@ -1126,6 +1136,16 @@ paths:
                         - WITHDRAWN
                     type: string
                     format: enum
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
             responses:
                 "200":
                     description: OK
@@ -1305,6 +1325,16 @@ paths:
                         - SUBMITTED
                     type: string
                     format: enum
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
             responses:
                 "200":
                     description: OK
